# Flick

./: .gitignore  LICENSE  README.md  analysis_options.yaml  build.yaml  flutter_launcher_icons.yaml  pubspec.yaml
android/: copy_ndk_libs.sh  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
docs/: DAP_BIT_PERFECT_OFF_ISSUES.md  DOCUMENTATION.md  SHOREBIRD_SETUP.md  UAC2_IMPLEMENTATION_CHECKLIST.md  UAC2_PHASE_6_SUMMARY.md  hardware_volume_control.md
docs/audio/: usb-dac-architecture-audit.md
docs/uac2/: README.md
docs/uac2/api/: ffi-bridge.md  flutter-api.md  rust-api.md
docs/uac2/architecture/: data-flow.md  modules.md  overview.md
docs/uac2/components/: audio-pipeline.md  descriptors.md  device-discovery.md  error-handling.md
docs/uac2/examples/: advanced-usage.md  basic-usage.md
docs/uac2/guides/: device-compatibility.md  getting-started.md  testing.md  troubleshooting.md
integration_test/: simple_test.dart
lib/: main.dart
lib/app/: app.dart
lib/core/constants/: app_constants.dart
lib/core/theme/: app_colors.dart  app_theme.dart
lib/core/utils/: audio_metadata_utils.dart  navigation_helper.dart
lib/data/: database.dart
lib/data/entities/: folder_entity.dart  folder_entity.g.dart  song_entity.dart  song_entity.g.dart
lib/data/repositories/: folder_repository.dart  recently_played_repository.dart  (+1 more)
lib/models/: audio_engine_type.dart  audio_output_diagnostics.dart  playback_state.dart  playlist.dart  song.dart  song_view_mode.dart
lib/providers/: auto_sync_provider.dart  equalizer_provider.dart  lastfm_provider.dart  lastfm_provider.g.dart  library_scan_preferences_provider.dart  navigation_provider.dart  player_provider.dart  playlist_provider.dart  providers.dart  songs_provider.dart  songs_view_mode_provider.dart  uac2_provider.dart
lib/services/: alac_converter_service.dart  album_art_import_service.dart  album_art_service.dart  android_audio_device_service.dart  android_audio_engine.dart  android_audio_processing_service.dart  audio_engine.dart  audio_engine_manager.dart  audio_route_manager.dart  audio_session_manager.dart  auto_library_sync_service.dart  cue_file_service.dart  display_mode_service.dart  eq_preset_file_service.dart  eq_preset_service.dart  equalizer_service.dart  external_playback_service.dart  favorites_service.dart  gallery_save_service.dart  last_played_service.dart  library_scanner_service.dart  lyrics_service.dart  music_folder_service.dart  notification_service.dart  permission_service.dart  player_service.dart  playlist_service.dart  replay_play_tracker.dart  rip_log_service.dart  rust_audio_engine.dart  rust_audio_service.dart  songs_view_preference_service.dart  uac2_preferences_service.dart  uac2_service.dart
rust/: Cargo.toml  build.rs  cargokit.yaml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: audio_api.rs  mod.rs  scanner.rs  uac2_api.rs
rust/src/audio/: alac_converter.rs  commands.rs  crossfader.rs  decoder.rs  device.rs  engine.rs  equalizer.rs  fx.rs  manager.rs  mod.rs  resampler.rs  source.rs  strategy.rs  verifier.rs
rust/src/library_scan/: tests.rs  two_phase.rs
rust/src/uac2/: android_direct.rs  audio_format.rs  audio_pipeline.rs  backend.rs  capabilities.rs  connection_manager.rs  constants.rs  control_requests.rs  device.rs  device_classifier.rs  device_enumeration.rs  device_info_extractor.rs  endpoint.rs  error.rs  format_negotiation.rs  logging.rs  mod.rs  registry.rs  ring_buffer.rs  stream_config.rs  stream_setup.rs  transfer.rs
rust/src/uac2/descriptors/: audio_control_parser.rs  audio_streaming_parser.rs  builders.rs  factory.rs  helpers.rs  iad_parser.rs  mod.rs  parse.rs  parser_trait.rs  types.rs  validation.rs
rust/src/uac2/tests/: audio_format_tests.rs  audio_pipeline_tests.rs  capabilities_tests.rs  control_requests_tests.rs  device_classifier_tests.rs  mod.rs  ring_buffer_tests.rs  stream_config_tests.rs  transfer_tests.rs
rust/tests/: alac_converter_tests.rs  uac2_integration_tests.rs  uac2_performance_tests.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/cargokit/: run_build_tool.sh
rust_builder/ios/: rust_lib_flick_player.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_flick_player.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
test/services/: eq_preset_file_service_test.dart  player_service_format_test.dart  player_service_notification_test.dart  replay_play_tracker_test.dart
(+78 files in other folders)
