[package]
name = "rust_lib_flick_player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
flutter_rust_bridge = "=2.11.1"
lofty = "0.21.1"
walkdir = "2"
rayon = "1.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] } # Often useful particularly with bridge
