[package]
name = "rust_lib_flick_player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["native_audio"]
# Enable native audio engine (now enabled on Android with CPAL/Oboe)
native_audio = ["cpal", "symphonia", "rubato", "ringbuf", "crossbeam-channel"]
# Custom UAC 2.0 USB Audio (host-side DAC/AMP support)
uac2 = ["rusb", "libusb1-sys"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
lofty = "0.21.1"
jwalk = "0.8"
walkdir = "2"
rayon = "1.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] } # Often useful particularly with bridge
parking_lot = "0.12"             # Faster mutexes
once_cell = "1.19"               # Lazy static initialization

# Error handling (UAC2 + general)
thiserror = "1.0"

# Logging (UAC2 + general)
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UAC 2.0 USB host (optional, for DAC/AMP detection and bit-perfect playback)
rusb = { version = "0.9", optional = true }
libusb1-sys = { version = "0.7", optional = true }

# Async runtime for serialized engine initialization and UAC2 tasks
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "io-util"] }

# Audio Engine Dependencies (available on all platforms including Android)
cpal = { path = "vendor/cpal", optional = true, features = ["oboe-shared-stdcxx"] }
symphonia = { version = "0.5", features = ["all"], optional = true }
rubato = { version = "0.15", optional = true }
ringbuf = { version = "0.4", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

# ALAC/M4A decoder dependencies (using symphonia with all codecs)
# Note: Symphonia 0.5 includes ALAC support via the "all" feature

[target.'cfg(target_os = "android")'.dependencies]
oboe = { version = "0.6", features = ["java-interface"] }
jni = "0.21"
ndk-context = "0.1"

# Desktop platforms use default CPAL backends
[target.'cfg(not(target_os = "android"))'.dependencies]
cpal = { path = "vendor/cpal" }
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"
ringbuf = "0.4"
crossbeam-channel = "0.5"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
notify = "6.1"
